--- a/index.html
+++ b/index.html
@@ -30,18 +30,72 @@
     </header>
     <div class="container" class="hrChunks" id="hrChunks" row-8>
       <!-- 8 hrs of time block -->
-      <div class="container" id="hrChunk"><textarea class="form-control" id="hrChunk1" rows="3"></textarea></div>
-      <div class="container" id="hrChunk"><textarea class="form-control" id="hrChunk2" rows="3"></textarea></div>
-      <div class="container" id="hrChunk"><textarea class="form-control" id="hrChunk3" rows="3"></textarea></div>
-      <div class="container" id="hrChunk"><textarea class="form-control" id="hrChunk4" rows="3"></textarea></div>
-      <div class="container" id="hrChunk"><textarea class="form-control" id="hrChunk5" rows="3"></textarea></div>
-      <div class="container" id="hrChunk"><textarea class="form-control" id="hrChunk6" rows="3"></textarea></div>
-      <div class="container" id="hrChunk"><textarea class="form-control" id="hrChunk7" rows="3"></textarea></div>
-      <div class="container" id="hrChunk"><textarea class="form-control" id="hrChunk8" rows="3"></textarea></div>
+      <div class="container" id="hrChunk">
+        <textarea class="form-control" id="hrChunk2" placeholder="what to do with time?" rows="3"></textarea> 
+        <button type="button" id="saveBtn" class="btn btn-secondary myButton">
+          Save
+          <i class="fas fa-save"></i></button></div> 
+<br>
+      <div class="container" id="hrChunk">
+        <textarea class="form-control" id="hrChunk1" placeholder="what to do with time?" rows="3"></textarea>
+        <button type="button" id="saveBtn" class="btn btn-secondary myButton">
+          Save
+          <i class="fas fa-save"></i></button></div> 
+<br>
+      </div>
+      <br>
+      <div class="container" id="hrChunk">
+        <textarea class="form-control" id="hrChunk3" placeholder="what to do with time?" rows="3"></textarea>
+        <button type="button" id="saveBtn" class="btn btn-secondary myButton">
+          Save
+          <i class="fas fa-save"></i></button></div> 
+<br>
+      </div>
+      <br>
+      <div class="container" id="hrChunk">
+        <textarea class="form-control" id="hrChunk4" placeholder="what to do with time?" rows="3"></textarea>
+          <button type="button" id="saveBtn" class="btn btn-secondary myButton">
+            Save
+            <i class="fas fa-save"></i></button></div>
+          </div> 
+<br>
+        </textarea></div>
+      <br>
+      <div class="container" id="hrChunk">
+        <textarea class="form-control" id="hrChunk5" placeholder="what to do with time?" rows="3"></textarea>
+        <button type="button" id="saveBtn" class="btn btn-secondary myButton">
+          Save
+          <i class="fas fa-save"></i></button></div> 
+      </div>
+      <br>
+      <div class="container" id="hrChunk">
+        <textarea class="form-control" id="hrChunk6" placeholder="what to do with time?" rows="3"></textarea>
+        <button type="button" id="saveBtn" class="btn btn-secondary myButton">
+          Save
+          <i class="fas fa-save"></i></button></div> 
+      </div>
+      <br>
+      <div class="container" id="hrChunk">
+        <textarea class="form-control" id="hrChunk7" placeholder="what to do with time?" rows="3"></textarea>
+        <button type="button" id="saveBtn" class="btn btn-secondary myButton">
+          Save
+          <i class="fas fa-save"></i></button></div> 
+      </div>
+      <br>
+      <div class="container" id="hrChunk">
+        <textarea class="form-control" id="hrChunk8" placeholder="what to do with time?" rows="3"></textarea>
+        <button type="button" id="saveBtn" class="btn btn-secondary myButton">
+          Save
+          <i class="fas fa-save"></i></button></div> 
+      </div>
 
       
     </div>
-
+    <script
+  src="https://code.jquery.com/jquery-3.4.1.js"
+  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+  crossorigin="anonymous"></script>
+    <script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   </body>
