--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <i class="fas fa-save"></i></button></div> 
       </div>
       <br>
-      <div class="container" id="hrChunk">
+      <div class="container" id="hrChunk">Hour 8
         <textarea class="form-control" id="hrChunk8" placeholder="what to do with time?" rows="3"></textarea>
         <button type="button" id="saveBtn" class="btn btn-secondary myButton">
           Save
