--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+
+    <link href="https://fonts.googleapis.com/css?family=Audiowide&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css" />
     <title>Work Day Scheduler</title>
   </head>
@@ -25,20 +28,20 @@
   <body>
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
+      <p class="lead"><h2>A simple calendar app for scheduling your work day</h2></p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container" class="hrChunks" id="hrChunks" row-8>
+    <div class="container" class="hrChunks" id="hrChunks" rows='8'>
       <!-- 8 hrs of time block --> 
 <br>
-      <div class="container" id="hrChunk">
+      <div class="container" id="hrChunk"><div><h1>Hr 1</h1></div>
         <textarea class="form-control" id="hrChunk1" placeholder="what to do with time?" rows="3"></textarea>
         <button type="button" id="saveBtn" class="btn btn-secondary myButton">
           Save
           <i class="fas fa-save"></i></button></div> 
 <br>
 
-<div class="container" id="hrChunk">
+<div class="container" id="hrChunk"><div><h1>Hr 2</h1></div>
   <textarea class="form-control" id="hrChunk2" placeholder="what to do with time?" rows="3"></textarea> 
   <button type="button" id="saveBtn" class="btn btn-secondary myButton">
     Save
@@ -46,7 +49,7 @@
 <br>
       </div>
       <br>
-      <div class="container" id="hrChunk">
+      <div class="container" id="hrChunk"><div><h1>Hr 3</h1></div>
         <textarea class="form-control" id="hrChunk3" placeholder="what to do with time?" rows="3"></textarea>
         <button type="button" id="saveBtn" class="btn btn-secondary myButton">
           Save
@@ -54,7 +57,7 @@
 <br>
       </div>
       <br>
-      <div class="container" id="hrChunk">
+      <div class="container" id="hrChunk"><div><h1>Hr 4</h1></div>
         <textarea class="form-control" id="hrChunk4" placeholder="what to do with time?" rows="3"></textarea>
           <button type="button" id="saveBtn" class="btn btn-secondary myButton">
             Save
@@ -63,28 +66,28 @@
 <br>
         </textarea></div>
       <br>
-      <div class="container" id="hrChunk">
+      <div class="container" id="hrChunk"><div><h1>Hr 5</h1></div>
         <textarea class="form-control" id="hrChunk5" placeholder="what to do with time?" rows="3"></textarea>
         <button type="button" id="saveBtn" class="btn btn-secondary myButton">
           Save
           <i class="fas fa-save"></i></button></div> 
       </div>
       <br>
-      <div class="container" id="hrChunk">
+      <div class="container" id="hrChunk"><div><h1>Hr 6</h1></div>
         <textarea class="form-control" id="hrChunk6" placeholder="what to do with time?" rows="3"></textarea>
         <button type="button" id="saveBtn" class="btn btn-secondary myButton">
           Save
           <i class="fas fa-save"></i></button></div> 
       </div>
       <br>
-      <div class="container" id="hrChunk">
+      <div class="container" id="hrChunk"><div><h1>Hr 7</h1></div>
         <textarea class="form-control" id="hrChunk7" placeholder="what to do with time?" rows="3"></textarea>
         <button type="button" id="saveBtn" class="btn btn-secondary myButton">
           Save
           <i class="fas fa-save"></i></button></div> 
       </div>
       <br>
-      <div class="container" id="hrChunk">Hour 8
+      <div class="container" id="hrChunk"><div><h1>Hr 8</h1></div>
         <textarea class="form-control" id="hrChunk8" placeholder="what to do with time?" rows="3"></textarea>
         <button type="button" id="saveBtn" class="btn btn-secondary myButton">
           Save
