dope fade in and note1 saving to local storage

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
       <p class="lead"><h2>A simple calendar app for scheduling your work day</h2></p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container" class="hrChunks" id="hrChunks" rows='8'>
+<!-- start of 8 hr chunk container------------------------------------------------------------------------------------>
+<div class="container hide" id="hrChunks" rows="8">
       <!-- 8 hrs of time block --> 
 <br>
       <div class="container" id="hrChunk"><div><h1>Hr 1</h1></div>
@@ -40,62 +41,50 @@
           Save
           <i class="fas fa-save"></i></button></div> 
 <br>
-
 <div class="container" id="hrChunk"><div><h1>Hr 2</h1></div>
   <textarea class="form-control" id="hrChunk2" placeholder="what to do with time?" rows="3"></textarea> 
   <button type="button" id="saveBtn" class="btn btn-secondary myButton">
     Save
     <i class="fas fa-save"></i></button></div>
-<br>
-      </div>
-      <br>
+ 
+ <br>
       <div class="container" id="hrChunk"><div><h1>Hr 3</h1></div>
         <textarea class="form-control" id="hrChunk3" placeholder="what to do with time?" rows="3"></textarea>
         <button type="button" id="saveBtn" class="btn btn-secondary myButton">
           Save
           <i class="fas fa-save"></i></button></div> 
 <br>
-      </div>
-      <br>
       <div class="container" id="hrChunk"><div><h1>Hr 4</h1></div>
         <textarea class="form-control" id="hrChunk4" placeholder="what to do with time?" rows="3"></textarea>
           <button type="button" id="saveBtn" class="btn btn-secondary myButton">
             Save
             <i class="fas fa-save"></i></button></div>
-          </div> 
 <br>
-        </textarea></div>
-      <br>
-      <div class="container" id="hrChunk"><div><h1>Hr 5</h1></div>
+   <div class="container" id="hrChunk"><div><h1>Hr 5</h1></div>
         <textarea class="form-control" id="hrChunk5" placeholder="what to do with time?" rows="3"></textarea>
         <button type="button" id="saveBtn" class="btn btn-secondary myButton">
           Save
           <i class="fas fa-save"></i></button></div> 
-      </div>
-      <br>
+<br>
       <div class="container" id="hrChunk"><div><h1>Hr 6</h1></div>
         <textarea class="form-control" id="hrChunk6" placeholder="what to do with time?" rows="3"></textarea>
         <button type="button" id="saveBtn" class="btn btn-secondary myButton">
           Save
           <i class="fas fa-save"></i></button></div> 
-      </div>
-      <br>
+<br>
       <div class="container" id="hrChunk"><div><h1>Hr 7</h1></div>
         <textarea class="form-control" id="hrChunk7" placeholder="what to do with time?" rows="3"></textarea>
         <button type="button" id="saveBtn" class="btn btn-secondary myButton">
           Save
           <i class="fas fa-save"></i></button></div> 
-      </div>
-      <br>
+<br>
       <div class="container" id="hrChunk"><div><h1>Hr 8</h1></div>
         <textarea class="form-control" id="hrChunk8" placeholder="what to do with time?" rows="3"></textarea>
         <button type="button" id="saveBtn" class="btn btn-secondary myButton">
           Save
           <i class="fas fa-save"></i></button></div> 
-      </div>
-
-      
-    </div>
+</div>
+   
     <script
   src="https://code.jquery.com/jquery-3.4.1.js"
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
