--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <p class="lead"><h2>A simple calendar app for scheduling your work day</h2></p>
       <p id="currentDay" class="lead"></p>
     </header>
-<!-- start of 8 hr chunk container------------------------------------------------------------------------------------>
+<!-- start of 8 hr chunk container-------------------- ---------------------------------------------------------------->
 <div class="container hide" id="hrChunks" rows="8">
       <!-- 8 hrs of time block --> 
 <br>
@@ -93,5 +93,10 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="buttonclicks.js"></script>
+    <script src="momnt.js"></script>
+    <script src="moment.js"></script>
+<script>
+    moment().format();
+</script>
   </body>
 </html>
