--- a/index.html
+++ b/index.html
@@ -37,50 +37,50 @@
 <br>
       <div class="container" id="hrChunk"><div><h1>Hr 1</h1></div>
         <textarea class="form-control" id="hrChunk1" placeholder="what to do with time?" rows="3"></textarea>
-        <button type="button" id="saveBtn" class="btn btn-secondary myButton">
+        <button type="button" id="saveBtn1" class="btn btn-secondary myButton"><div id="panel">Note Saved!</div>
           Save
           <i class="fas fa-save"></i></button></div> 
 <br>
 <div class="container" id="hrChunk"><div><h1>Hr 2</h1></div>
   <textarea class="form-control" id="hrChunk2" placeholder="what to do with time?" rows="3"></textarea> 
-  <button type="button" id="saveBtn" class="btn btn-secondary myButton">
+  <button type="button" id="saveBtn2" class="btn btn-secondary myButton">
     Save
     <i class="fas fa-save"></i></button></div>
  
  <br>
       <div class="container" id="hrChunk"><div><h1>Hr 3</h1></div>
         <textarea class="form-control" id="hrChunk3" placeholder="what to do with time?" rows="3"></textarea>
-        <button type="button" id="saveBtn" class="btn btn-secondary myButton">
+        <button type="button" id="saveBtn3" class="btn btn-secondary myButton">
           Save
           <i class="fas fa-save"></i></button></div> 
 <br>
       <div class="container" id="hrChunk"><div><h1>Hr 4</h1></div>
         <textarea class="form-control" id="hrChunk4" placeholder="what to do with time?" rows="3"></textarea>
-          <button type="button" id="saveBtn" class="btn btn-secondary myButton">
+          <button type="button" id="saveBtn4" class="btn btn-secondary myButton">
             Save
             <i class="fas fa-save"></i></button></div>
 <br>
    <div class="container" id="hrChunk"><div><h1>Hr 5</h1></div>
         <textarea class="form-control" id="hrChunk5" placeholder="what to do with time?" rows="3"></textarea>
-        <button type="button" id="saveBtn" class="btn btn-secondary myButton">
+        <button type="button" id="saveBtn5" class="btn btn-secondary myButton">
           Save
           <i class="fas fa-save"></i></button></div> 
 <br>
       <div class="container" id="hrChunk"><div><h1>Hr 6</h1></div>
         <textarea class="form-control" id="hrChunk6" placeholder="what to do with time?" rows="3"></textarea>
-        <button type="button" id="saveBtn" class="btn btn-secondary myButton">
+        <button type="button" id="saveBtn6" class="btn btn-secondary myButton">
           Save
           <i class="fas fa-save"></i></button></div> 
 <br>
       <div class="container" id="hrChunk"><div><h1>Hr 7</h1></div>
         <textarea class="form-control" id="hrChunk7" placeholder="what to do with time?" rows="3"></textarea>
-        <button type="button" id="saveBtn" class="btn btn-secondary myButton">
+        <button type="button" id="saveBtn7" class="btn btn-secondary myButton">
           Save
           <i class="fas fa-save"></i></button></div> 
 <br>
       <div class="container" id="hrChunk"><div><h1>Hr 8</h1></div>
         <textarea class="form-control" id="hrChunk8" placeholder="what to do with time?" rows="3"></textarea>
-        <button type="button" id="saveBtn" class="btn btn-secondary myButton">
+        <button type="button" id="saveBtn8" class="btn btn-secondary myButton">
           Save
           <i class="fas fa-save"></i></button></div> 
 </div>
@@ -94,7 +94,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="buttonclicks.js"></script>
     <script src="momnt.js"></script>
-    <script src="moment.js"></script>
 <script>
     moment().format();
 </script>
