--- a/index.html
+++ b/index.html
@@ -32,55 +32,54 @@
       <p id="currentDay" class="lead"></p>
     </header>
 <!-- start of 8 hr chunk container-------------------- ---------------------------------------------------------------->
-<div class="container hide" id="hrChunks" rows="8">
+<div class="container" id="hrChunks" rows="8">
       <!-- 8 hrs of time block --> 
 <br>
-      <div class="container" id="hrChunk"><div><h1>Hr 1</h1></div>
+      <div class="container chunk" id="hrChunkOne"><div><h1>Hr 1</h1></div>
         <textarea class="form-control" id="hrChunk1" placeholder="what to do with time?" rows="3"></textarea>
-        <button type="button" id="saveBtn1" class="btn btn-secondary myButton"><div id="panel">Note Saved!</div>
+        <button type="button" id="saveBtn1" class="btn btn-secondary myButton"><div class="panel" id="pane1">Note Saved!</div>
           Save
           <i class="fas fa-save"></i></button></div> 
 <br>
-<div class="container" id="hrChunk"><div><h1>Hr 2</h1></div>
+<div class="container chunk" id="hrChunkTwo"><div><h1>Hr 2</h1></div>
   <textarea class="form-control" id="hrChunk2" placeholder="what to do with time?" rows="3"></textarea> 
-  <button type="button" id="saveBtn2" class="btn btn-secondary myButton">
+  <button type="button" id="saveBtn2" class="btn btn-secondary myButton"><div class="panel" id="pane2">Note Saved!</div>
     Save
     <i class="fas fa-save"></i></button></div>
  
  <br>
-      <div class="container" id="hrChunk"><div><h1>Hr 3</h1></div>
+      <div class="container chunk" id="hrChunkThr"><div><h1>Hr 3</h1></div>
         <textarea class="form-control" id="hrChunk3" placeholder="what to do with time?" rows="3"></textarea>
-        <button type="button" id="saveBtn3" class="btn btn-secondary myButton">
+        <button type="button" id="saveBtn3" class="btn btn-secondary myButton"><div class="panel" id="pane3">Note Saved!</div>
           Save
           <i class="fas fa-save"></i></button></div> 
 <br>
-      <div class="container" id="hrChunk"><div><h1>Hr 4</h1></div>
+      <div class="container chunk" id="hrChunkFou"><div><h1>Hr 4</h1></div>
         <textarea class="form-control" id="hrChunk4" placeholder="what to do with time?" rows="3"></textarea>
-          <button type="button" id="saveBtn4" class="btn btn-secondary myButton">
+          <button type="button" id="saveBtn4" class="btn btn-secondary myButton"><div class="panel" id="pane4">Note Saved!</div>
             Save
             <i class="fas fa-save"></i></button></div>
 <br>
-   <div class="container" id="hrChunk"><div><h1>Hr 5</h1></div>
+   <div class="container chunk" id="hrChunkFiv"><div><h1>Hr 5</h1></div>
         <textarea class="form-control" id="hrChunk5" placeholder="what to do with time?" rows="3"></textarea>
-        <button type="button" id="saveBtn5" class="btn btn-secondary myButton">
+        <button type="button" id="saveBtn5" class="btn btn-secondary myButton"><div class="panel" id="pane5">Note Saved!</div>
           Save
           <i class="fas fa-save"></i></button></div> 
 <br>
-      <div class="container" id="hrChunk"><div><h1>Hr 6</h1></div>
+      <div class="container chunk" id="hrChunkSix"><div><h1>Hr 6</h1></div>
         <textarea class="form-control" id="hrChunk6" placeholder="what to do with time?" rows="3"></textarea>
-        <button type="button" id="saveBtn6" class="btn btn-secondary myButton">
+        <button type="button" id="saveBtn6" class="btn btn-secondary myButton"><div class="panel" id="pane6">Note Saved!</div>
           Save
           <i class="fas fa-save"></i></button></div> 
 <br>
-      <div class="container" id="hrChunk"><div><h1>Hr 7</h1></div>
+      <div class="container chunk" id="hrChunkSev"><div><h1>Hr 7</h1></div>
         <textarea class="form-control" id="hrChunk7" placeholder="what to do with time?" rows="3"></textarea>
-        <button type="button" id="saveBtn7" class="btn btn-secondary myButton">
-          Save
+        <button type="button" id="saveBtn7" class="btn btn-secondary myButton">Save<div class="panel" id="pane7">Note Saved!</div>
           <i class="fas fa-save"></i></button></div> 
 <br>
-      <div class="container" id="hrChunk"><div><h1>Hr 8</h1></div>
+      <div class="container chunk" id="hrChunkEig"><div><h1>Hr 8</h1></div>
         <textarea class="form-control" id="hrChunk8" placeholder="what to do with time?" rows="3"></textarea>
-        <button type="button" id="saveBtn8" class="btn btn-secondary myButton">
+        <button type="button" id="saveBtn8" class="btn btn-secondary myButton"><div class="panel" id="pane8">Note Saved!</div>
           Save
           <i class="fas fa-save"></i></button></div> 
 </div>
