--- a/index.html
+++ b/index.html
@@ -4,24 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
+    <!-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------CDN bootstrap link  -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/><link>
+    <!-- --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------font awesome CDN link -->
+    <link rel="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"/>
+<!-- --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------goodgle fonts -->
+<!---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------goodgle fonts open sans-->
     <link href="https://fonts.googleapis.com/css?family=Audiowide&display=swap" rel="stylesheet">
+<!---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------goodgle fonts Audiowide-->
+<link rel="stylesheet" href="style.css" />
+<!-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------css----->
 
-    <link rel="stylesheet" href="style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -29,18 +23,24 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead"><h2>A simple calendar app for scheduling your work day</h2></p>
+      <!----------------------------------------------------------------------------------------------------------------------------------------------------------date------------------->
       <p id="currentDay" class="lead"></p>
+      <!----------------------------------------------------------------------------------------------------------------------------------------------------------date------------------->
+
     </header>
-<!-- start of 8 hr chunk container-------------------- ---------------------------------------------------------------->
+<!-- start of 8 hr chunk container------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
 <div class="container" id="hrChunks" rows="8">
       <!-- 8 hrs of time block --> 
 <br>
+<!------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ hr Chunk1 -->
       <div class="container chunk" id="hrChunkOne"><div><h1>Hr 1</h1></div>
         <textarea class="form-control" id="hrChunk1" placeholder="what to do with time?" rows="3"></textarea>
         <button type="button" id="saveBtn1" class="btn btn-secondary myButton"><div class="panel" id="pane1">Note Saved!</div>
           Save
           <i class="fas fa-save"></i></button></div> 
 <br>
+<!------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ hr Chunk2 -->
+
 <div class="container chunk" id="hrChunkTwo"><div><h1>Hr 2</h1></div>
   <textarea class="form-control" id="hrChunk2" placeholder="what to do with time?" rows="3"></textarea> 
   <button type="button" id="saveBtn2" class="btn btn-secondary myButton"><div class="panel" id="pane2">Note Saved!</div>
@@ -48,42 +48,54 @@
     <i class="fas fa-save"></i></button></div>
  
  <br>
+<!------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ hr Chunk3 -->
+
       <div class="container chunk" id="hrChunkThr"><div><h1>Hr 3</h1></div>
         <textarea class="form-control" id="hrChunk3" placeholder="what to do with time?" rows="3"></textarea>
         <button type="button" id="saveBtn3" class="btn btn-secondary myButton"><div class="panel" id="pane3">Note Saved!</div>
           Save
           <i class="fas fa-save"></i></button></div> 
 <br>
+<!------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ hr Chunk4 -->
+
       <div class="container chunk" id="hrChunkFou"><div><h1>Hr 4</h1></div>
         <textarea class="form-control" id="hrChunk4" placeholder="what to do with time?" rows="3"></textarea>
           <button type="button" id="saveBtn4" class="btn btn-secondary myButton"><div class="panel" id="pane4">Note Saved!</div>
             Save
             <i class="fas fa-save"></i></button></div>
 <br>
+<!------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ hr Chunk5 -->
+
    <div class="container chunk" id="hrChunkFiv"><div><h1>Hr 5</h1></div>
         <textarea class="form-control" id="hrChunk5" placeholder="what to do with time?" rows="3"></textarea>
         <button type="button" id="saveBtn5" class="btn btn-secondary myButton"><div class="panel" id="pane5">Note Saved!</div>
           Save
           <i class="fas fa-save"></i></button></div> 
 <br>
+<!------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ hr Chunk6 -->
+
       <div class="container chunk" id="hrChunkSix"><div><h1>Hr 6</h1></div>
         <textarea class="form-control" id="hrChunk6" placeholder="what to do with time?" rows="3"></textarea>
         <button type="button" id="saveBtn6" class="btn btn-secondary myButton"><div class="panel" id="pane6">Note Saved!</div>
           Save
           <i class="fas fa-save"></i></button></div> 
 <br>
+<!------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ hr Chunk7 -->
+
       <div class="container chunk" id="hrChunkSev"><div><h1>Hr 7</h1></div>
         <textarea class="form-control" id="hrChunk7" placeholder="what to do with time?" rows="3"></textarea>
         <button type="button" id="saveBtn7" class="btn btn-secondary myButton">Save<div class="panel" id="pane7">Note Saved!</div>
           <i class="fas fa-save"></i></button></div> 
 <br>
+<!------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ hr Chunk8 -->
+
       <div class="container chunk" id="hrChunkEig"><div><h1>Hr 8</h1></div>
         <textarea class="form-control" id="hrChunk8" placeholder="what to do with time?" rows="3"></textarea>
         <button type="button" id="saveBtn8" class="btn btn-secondary myButton"><div class="panel" id="pane8">Note Saved!</div>
           Save
           <i class="fas fa-save"></i></button></div> 
 </div>
-   
+<!-- end of 8 hr chunk container-------------------- ----------------------------------------------------------------> 
     <script
   src="https://code.jquery.com/jquery-3.4.1.js"
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
@@ -91,6 +103,7 @@
     <script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="notes.js"></script>
     <script src="buttonclicks.js"></script>
     <script src="momnt.js"></script>
 <script>
