--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 <br>
 <!------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ hr Chunk5 -->
 
-   <div class="container chunk" id="hrChunkFiv"><div><h1>Hr 5</h1></div>
-        <textarea class="form-control" id="hrChunk5" placeholder="what to do with time?" rows="3"></textarea>
+   <div class="container chunk" id="hrChunkFiv"><div id="currentTime"><h1>Hr 5</h1></div>
+        <textarea class="form-control" id="hrChunk5" placeholder="what to do with time?" rows="3" val()></textarea>
         <button type="button" id="saveBtn5" class="btn btn-secondary myButton"><div class="panel" id="pane5">Note Saved!</div>
           Save
           <i class="fas fa-save"></i></button></div> 
